[package]
name = "pratt"
version = "0.4.0"
description = "A Pratt parser for Rust"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/segeljakt/pratt/"
keywords = ["pratt", "parser"]
categories = ["parsing"]

[lib]
name = "pratt"
path = "src/lib.rs"
