[package]
name = "example"
version = "0.3.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pratt = { version = "0.3.0", path = "../" }
regex = "1.3.6"
lalrpop-util = "0.18.1"

[build-dependencies]
lalrpop = { version = "0.18.1", features = [ "lexer" ] }
